--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     font-size: 20px;
   }
   body{
-      background-color: rgb(232, 248, 255)
+      background-color: #fffffe
   }
 
 
@@ -32,7 +32,7 @@
     font-family: 'Cormorant Garamond', serif;
   }
   h1 {
-    color: rgb(192, 69, 69);
+    color: #094067;
     font-size: 60px;
     font-weight: 700px;
   }
@@ -65,7 +65,7 @@
   
   /* Change the link color to #111 (black) on hover */
   li a:hover {
-    background-color: rgb(235, 149, 149);
+    background-color: #90b4ce;
   }
 
 
@@ -75,6 +75,6 @@
       display: flex;
       justify-content: center;
       padding: 5px;
-      background-color: #80bfff;
+      background-color: #71A3DE;
       color: #fff;
   }
