--- a/style.css
+++ b/style.css
@@ -75,6 +75,6 @@
       display: flex;
       justify-content: center;
       padding: 5px;
-      background-color: #71A3DE;
+      background-color: #90b4ce;
       color: #fff;
   }
