--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@
     text-decoration: none;
   }
  
-  tabl, th, td{border-collapse:collapse; 
-      border:1px solid black 
-
-  }
+  table, th, td{border-collapse:collapse;
+      border:1px solid black ; 
+      margin:2px
+    }
