--- a/style.css
+++ b/style.css
@@ -130,14 +130,56 @@ input[ type = submit]:active {
   
 }
 
-.defaultSzImg{
-  width:756px;
+#sizePic{
+  width:750px;
   height:350px;
 }
 
-@media screen and (max-width:468px) {
-  .defaultSzImg{
-    width:200px;
-    height:150px;
+
+#sizePic19{
+  width:750px;
+  height:350px;
+}
+#sizePic20{
+  width:750px;
+  height:350px;
+}
+#sizePic21{
+  width:750px;
+  height:350px;
+}
+#solutionPic{
+  width:750px;
+  height:350px;
+}
+#surveyPic1{
+  width:750px;
+  height:350px;
+}
+#surveyPic2{
+  width:750px;
+  height:350px;
+}
+
+@media screen and (max-width:400px) {
+  #sizePic {
+    width:350px;
+    height:200px;
+  }
+  #sizePic19 {
+    width:350px;
+    height:200px;
+  }
+  #sizePic20 {
+    width:350px;
+    height:200px;
+  }
+  #sizePic21 {
+    width:350px;
+    height:200px;
+  }
+  #solutionPic {
+    width:350px;
+    height:200px;
   }
 }
