--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
   
   }
   body{
-      background-color: #fffffe
+      background-color: #F8F4EE
   }
 
 
@@ -128,6 +128,11 @@ input[ type = submit]:active {
 .sImage{
   float: left;
   
+}
+.h2T {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 55px;
+  font-weight:549;
 }
 
 #sizePic{
